package protobufDataStore;

message InputConfig {
  optional string filePath = 1;
}

message OutputConfig {
  optional string filePath = 1;
}

enum Status {
  UNKNOWN = 0;
  SUCCESS = 1;
  FAILURE = 2;
}

message DataStoreReadResult {
  optional Status status = 1;
  repeated int32 results = 2;
  optional string failureMessage = 3;
}

message WriteResult {
  optional Status status = 1;
  optional string errorMessage = 2;
}

service DataStoreAPI {
    rpc read (InputConfig) returns (DataStoreReadResult);
    rpc appendSingleResult (AppendRequest) returns (WriteResult);
}

message AppendRequest {
  optional OutputConfig output = 1;
  optional string result = 2;
  optional string delimiter = 3;
}